copyediting and markup, remove some plugins never ported to KDE4

--- a/acquireimages.docbook
+++ b/acquireimages.docbook
@@ -17,7 +17,8 @@
 
 <abstract>
 <para>
-The Kipi acquire images plugin provides tools to capture new images and save them to the collections.
+The Kipi acquire images plugin provides tools to capture new images and save them
+to the collections.
 </para>
 </abstract>
 
@@ -31,20 +32,22 @@ The Kipi acquire images plugin provides tools to capture new images and save the
 
 <para>
 This plugin can be used to capture and add new images to the host application from external sources.
-Actually, two actions can be used :
+Actually, two actions can be used:
 </para>
 
 <itemizedlist>
 
 <listitem>
     <para>
-    <guilabel>Scan images</guilabel> : use the Kooka interface for scanning images from either a flat scanner supported by the Sane project or a another capture source like video streams (for this to work you must have installed Kooka and Sane).
+    <guilabel>Scan images</guilabel>: use the Kooka interface for scanning images
+    from either a flat scanner supported by the Sane project or a another capture
+    source like video streams (for this to work you must have installed Kooka and Sane).
     </para>
 </listitem>
 
 <listitem>
     <para>
-    <guilabel>Screenshots</guilabel> : take screenshots.
+    <guilabel>Screenshots</guilabel>: take screenshots.
     </para>
 </listitem>
 
@@ -54,19 +57,30 @@ Actually, two actions can be used :
 <title>Scan Image Dialog</title>
 
 <para>
-When you open the <guilabel>Scan images</guilabel> menu a dialog comes up that lets you choose between the available acquisition sources on your computer. Choose the one you want to capture from. You can also set the default source for the next time.
+When you open the <guilabel>Scan images</guilabel> menu a dialog comes up that lets
+you choose between the available acquisition sources on your computer. Choose the
+one you want to capture from. You can also set the default source for the next time.
 </para>
 
 <para>
-When the Kooka dialog window comes up, make your choices of acquisition settings by altering the default values. Look at the preview and crop it before making the final decision. The estimated file size is indicated in the lower right corner. See the dedicated <ulink url="help:/kooka/index.html">Kooka manual</ulink> for more information.
+When the Kooka dialog window comes up, make your choices of acquisition settings
+by altering the default values. Look at the preview and crop it before making the
+final decision. The estimated file size is indicated in the lower right corner.
+See the dedicated <ulink url="help:/kooka/index.html">Kooka manual</ulink> for
+more information.
 </para>
 
 <note><para>
-Make sure that the dialog is fully visible since some settings might be hidden if the window is too narrow.
+Make sure that the dialog is fully visible since some settings might be hidden
+if the window is too narrow.
 </para></note>
 
 <para>
-Press the scan button and wait until the scanning is finished and the <guilabel>Save Target Option</guilabel> dialog appears. Here you can alter the compression quality and the image file type (be aware that the BMP type is not compressed and creates large files). The second item in that dialog let you choose (or create) the folder the image will be saved to.
+Press the scan button and wait until the scanning is finished and the
+<guilabel>Save Target Option</guilabel> dialog appears. Here you can alter the
+compression quality and the image file type (be aware that the BMP type is not
+compressed and creates large files). The second item in that dialog let you choose
+(or create) the folder the image will be saved to.
 </para>
 
 <figure id="acquireimages-save-target-dialog">
@@ -82,25 +96,33 @@ Press the scan button and wait until the scanning is finished and the <guilabel>
 <title>Screenshot Dialog</title>
 
 <para>
-The <guilabel>Screenshot</guilabel> acquisition mode you can choose from 1st menu item->Import->Screenshot...
+You can choose the <guilabel>Screenshot</guilabel> acquisition mode from
+<menuchoice><guimenu>Import</guimenu><guimenuitem>Screenshot</guimenuitem></menuchoice>
 A dialog window comes up providing you with various snapshot modes:
 </para>
 
 <itemizedlist>
 <listitem>
    <para>
-   Deselect the <guilabel>Grab the entire desktop</guilabel> item to shoot a single window under the mouse cursor.
+   Deselect the <guilabel>Grab the entire desktop</guilabel> item to shoot a
+   single window under the mouse cursor.
    </para>
 </listitem>
 <listitem>
    <para>
-   When the <guilabel>Hide all host application windows</guilabel> item is selected the calling host application will disappear to give way to the other screens/windows. Otherwise you'll - after the delay - shoot the screen/window actually visible (if you've deselected <guilabel>Grab the entire desktop</guilabel> the window under the mouse pointer will be shot).
+   When the <guilabel>Hide all host application windows</guilabel> item is selected
+   the calling host application will disappear to give way to the other screens/windows.
+   Otherwise you'll - after the delay - shoot the screen/window actually visible
+   (if you've deselected <guilabel>Grab the entire desktop</guilabel> the window
+   under the mouse pointer will be shot).
    </para>
 </listitem>
 </itemizedlist>
 
 <para>
-The delay control determines how long Screenshot will wait until the exposure is happening. If you need to navigate to some other screens set the delay high enough to give you the time for navigation.
+The delay control determines how long Screenshot will wait until the exposure is
+happening. If you need to navigate to some other screens set the delay high enough
+to give you the time for navigation.
 </para>
 
 <figure id="acquireimages-screenshot-dialog">
@@ -111,7 +133,8 @@ The delay control determines how long Screenshot will wait until the exposure is
 </figure>
 
 <para>
-Once the screenshot has been taken the <guilabel>Save Target Option</guilabel> dialog appears with the same options as described above.
+Once the screenshot has been taken the <guilabel>Save Target Option</guilabel>
+dialog appears with the same options as described above.
 </para>
 
 </sect1>
