--- a/effectimages.docbook
+++ b/effectimages.docbook
@@ -27,30 +27,35 @@ The Kipi Effect Images plugin is a tool for to add a special effect to the image
 <para>
 
 This plugin can be used for batch FX transforming images in an Album.
- It use "convert" program from "ImageMagick" package. An image effect
+ It uses the <command>convert</command> program from the
+ <application>ImageMagick</application> package. An image effect
  preview (partial or full) is also available.
- 11 FX filters types have been implemented:
+ Eleven FX filter types have been implemented:
 </para>
 
 <itemizedlist>
-<listitem><para><emphasis>Adaptive threshold</emphasis> : perform local adaptive thresholding.</para></listitem>
-<listitem><para><emphasis>Charcoal</emphasis> : simulate a charcoal drawing.</para></listitem>
-<listitem><para><emphasis>Detect edges</emphasis> : detect edges within an image.</para></listitem>
-<listitem><para><emphasis>Emboss</emphasis> : returns a grayscale image with a three-dimensional effect.</para></listitem>
-<listitem><para><emphasis>Implode</emphasis> : implode image pixels about the center.</para></listitem>
-<listitem><para><emphasis>Paint</emphasis> : applies a special effect filter that simulates an oil painting.</para></listitem>
-<listitem><para><emphasis>Shade light</emphasis> : shines a distant light on an image to create a three-dimensional effect.</para></listitem>
-<listitem><para><emphasis>Solarize</emphasis> : negate all pixels above the threshold level.</para></listitem>
-<listitem><para><emphasis>Spread</emphasis> : this is a special effects method that randomly displaces each pixel in a block defined by the radius parameter.</para></listitem>
-<listitem><para><emphasis>Swirl</emphasis> : swirls the pixels about the center of the image.</para></listitem>
-<listitem><para><emphasis>Wave</emphasis> : creates a ripple effect in the image by shifting the pixels vertically along a sine wave.</para></listitem>
+<listitem><para><guilabel>Adaptive threshold</guilabel>: perform local adaptive
+    thresholding.</para></listitem>
+<listitem><para><guilabel>Charcoal</guilabel>: simulate a charcoal drawing.</para></listitem>
+<listitem><para><guilabel>Detect edges</guilabel>: detect edges within an image.</para></listitem>
+<listitem><para><guilabel>Emboss</guilabel>: returns a grayscale image with a
+    three-dimensional effect.</para></listitem>
+<listitem><para><guilabel>Implode</guilabel>: implode image pixels about the center.</para></listitem>
+<listitem><para><guilabel>Paint</guilabel>: applies a special effect filter that
+    simulates an oil painting.</para></listitem>
+<listitem><para><guilabel>Shade light</guilabel>: shines a distant light on an image
+    to create a three-dimensional effect.</para></listitem>
+<listitem><para><guilabel>Solarize</guilabel>: negate all pixels above the threshold level.</para></listitem>
+<listitem><para><guilabel>Spread</guilabel>: this is a special effects method that
+randomly displaces each pixel in a block defined by the radius parameter.</para></listitem>
+<listitem><para><guilabel>Swirl</guilabel>: swirls the pixels about the center of the image.</para></listitem>
+<listitem><para><guilabel>Wave</guilabel>: creates a ripple effect in the image
+    by shifting the pixels vertically along a sine wave.</para></listitem>
 </itemizedlist>
 
 <para>
-You can see some samples building with this plugin at this
 <ulink url="http://digikamplugins.free.fr/ImagesGallerySamples/MultipleAlbums/EffectImages/index.html">
-<citetitle>url.</citetitle>
-</ulink>
+You can see some samples built with this plugin at this &URL;</ulink>
 </para>
 
 </chapter>
