--- a/findduplicateimages.docbook
+++ b/findduplicateimages.docbook
@@ -27,7 +27,7 @@ The Kipi Find Duplicate Images plugin is a tool for find duplicate photograph on
 <para>
 The Kipi plugin <quote>Find Duplicate Images</quote> currently has no
 documentation.  If you are interested in rectifying that situation,
-please contact Kipi team mailing list <email>kde-imaging@kde.org</email>.
+please contact the Kipi team mailing list at <email>kde-imaging@kde.org</email>.
 </para>
 
 </chapter>
