--- a/galleryexport.docbook
+++ b/galleryexport.docbook
@@ -27,7 +27,7 @@ The Kipi Gallery Export plugin is a tool for export image collections to a remot
 <para>
 The Kipi plugin <quote>Gallery Export</quote> currently has no
 documentation.  If you are interested in rectifying that situation,
-please contact Kipi team mailing list <email>kde-imaging@kde.org</email>.
+please contact the Kipi team mailing list at <email>kde-imaging@kde.org</email>.
 </para>
 
 </chapter>
