--- a/imageviewer.docbook
+++ b/imageviewer.docbook
@@ -12,7 +12,7 @@
 
 <abstract>
 <para>
-The Kipi imageviewer is a very fast and flexible tool for viewing images, based on OpenGL
+The Kipi imageviewer is a very fast and flexible tool for viewing images, based on OpenGL.
 </para>
 </abstract>
 
@@ -25,7 +25,10 @@ The Kipi imageviewer is a very fast and flexible tool for viewing images, based 
 <title>Introduction</title>
 
 <para>
-The KIPI imageviewer allows to display a selection of images and to do basic operations, such as rotation, zooming or panning. The usage of the viewer is only based on keyboard shortcuts and mouse gestures. It was placed emphasis mainly on speed in displaying as well as fast access to the functions.
+The KIPI imageviewer allows to display a selection of images and to do basic
+operations, such as rotation, zooming or panning. The usage of the viewer is only
+based on keyboard shortcuts and mouse gestures. It was placed emphasis mainly on
+speed in displaying as well as fast access to the functions.
 </para>
 
 
@@ -35,10 +38,10 @@ The KIPI imageviewer allows to display a selection of images and to do basic ope
 <para>
 <itemizedlist>
 <listitem><para>Scrollwheel Down</para></listitem>
-<listitem><para>Down/Right Arrow</para></listitem>
-<listitem><para>Space</para></listitem>
-<listitem><para>Key N</para></listitem>
-<listitem><para>PgDown</para></listitem>
+<listitem><para><keysym>Down</keysym>/<keysym>Right</keysym></para></listitem>
+<listitem><para><keysym>Space</keysym></para></listitem>
+<listitem><para><keycap>N</keycap></para></listitem>
+<listitem><para><keycap>PgDown</keycap></para></listitem>
 </itemizedlist>
 </para>
 </listitem>
@@ -49,9 +52,9 @@ The KIPI imageviewer allows to display a selection of images and to do basic ope
 <para>
 <itemizedlist>
 <listitem><para>Scrollwheel Up</para></listitem>
-<listitem><para>Up/Left Arrow</para></listitem>
-<listitem><para>Key P</para></listitem>
-<listitem><para>PgUp</para></listitem>
+<listitem><para><keysym>Up</keysym>/<keysym>Left</keysym></para></listitem>
+<listitem><para><keycap>P</keycap></para></listitem>
+<listitem><para><keycap>PgUp</keycap></para></listitem>
 </itemizedlist>
 </para>
 </listitem>
@@ -61,7 +64,7 @@ The KIPI imageviewer allows to display a selection of images and to do basic ope
 <listitem>
 <para>
 <itemizedlist>
-<listitem><para>Esc</para></listitem>
+<listitem><para><keycap>Esc</keycap></para></listitem>
 </itemizedlist>
 </para>
 </listitem>
@@ -74,12 +77,13 @@ The KIPI imageviewer allows to display a selection of images and to do basic ope
 		<term>Toggle fullscreen/normal</term>
 		<listitem>
 			<para>
-				On startup, an image is displayed in fullscreen mode by default. It can be changed to windowed mode
+				On startup, an image is displayed in fullscreen mode by default.
+                It can be changed to windowed mode if desired.
 			</para>
 			<para>
 				<itemizedlist>
 					<listitem>
-						<para>Key F</para>
+						<para><keycap>F</keycap></para>
 					</listitem>
 				</itemizedlist>
 			</para>
@@ -90,12 +94,13 @@ The KIPI imageviewer allows to display a selection of images and to do basic ope
 		<term>Toggle scrollwheel action</term>
 		<listitem>
 			<para>
-			Turning the scrollwheel either proceeds to the next image or zooms into the image
+			Turning the scrollwheel either proceeds to the next image or zooms
+            into the image.
 			</para>
 			<para>
 			<itemizedlist>
 				<listitem>
-					<para>Key C</para>
+					<para><keycap>C</keycap></para>
 				</listitem>
 			</itemizedlist>
 			</para>
@@ -107,12 +112,12 @@ The KIPI imageviewer allows to display a selection of images and to do basic ope
 		<term>Rotation</term>
 		<listitem>
 			<para>
-			The rotation is only temporary and not saved to the file
+			The rotation is only temporary and not saved to the file.
 			</para>
 			<para>
 			<itemizedlist>
 				<listitem>
-					<para>Key R</para>
+					<para><keycap>R</keycap></para>
 				</listitem>
 			</itemizedlist>
 			</para>
@@ -138,12 +143,12 @@ The KIPI imageviewer allows to display a selection of images and to do basic ope
 		<term>Original size</term>
 		<listitem>
 			<para>
-			Each pixel of the image corresponds to a pixel of the screen
+			Each pixel of the image corresponds to a pixel of the screen.
 			</para>
 			<para>
 			<itemizedlist>
 				<listitem>
-					<para>Key O</para>
+					<para><keycap>O</keycap></para>
 				</listitem>
 			</itemizedlist>
 			</para>
@@ -158,16 +163,16 @@ The KIPI imageviewer allows to display a selection of images and to do basic ope
 		<listitem>
 			<itemizedlist>
 				<listitem>
-					<para>move mouse up/down while pressing the right mouse button</para>
+					<para>move mouse up/down while pressing the &RMB;</para>
 				</listitem>
 				<listitem>
-					<para>scrollwheel (in case you toggled the scrollwheel action)</para>
+					<para>scrollwheel (if you toggled the scrollwheel action)</para>
 				</listitem>
 				<listitem>
-					<para>plus/minus</para>
+					<para><keycap>+</keycap>/<keycap>-</keycap></para>
 				</listitem>
 				<listitem>
-					<para>Ctrl + scrollwheel</para>
+					<para>&Ctrl; + scrollwheel</para>
 				</listitem>
 			</itemizedlist>
 		</listitem>	
@@ -181,7 +186,7 @@ The KIPI imageviewer allows to display a selection of images and to do basic ope
 		<listitem>
 			<itemizedlist>
 				<listitem>
-					<para>move mouse while pressing the left mouse button</para>
+					<para>move mouse while pressing the &LMB;</para>
 				</listitem>
 			</itemizedlist>
 		</listitem>	
