--- a/kameraklient.docbook
+++ b/kameraklient.docbook
@@ -28,7 +28,7 @@ The Kipi Camera Client plugin is a tool to connect your computer to a digital ca
 <para>
 The Kipi plugin <quote>KameraKlient</quote> currently has no
 documentation.  If you are interested in rectifying that situation,
-please contact Kipi team mailing list <email>kde-imaging@kde.org</email>.
+please contact the Kipi team mailing list at <email>kde-imaging@kde.org</email>.
 </para>
 
 </chapter>
