--- a/resizeimages.docbook
+++ b/resizeimages.docbook
@@ -12,7 +12,7 @@
 
 <abstract>
 <para>
-The Kipi Resize Images plugin is a tool for resize or adapt the images dimensions.
+The Kipi Resize Images plugin is a tool that resizes or adapts images' dimensions.
 </para>
 </abstract>
 
@@ -23,23 +23,26 @@ The Kipi Resize Images plugin is a tool for resize or adapt the images dimension
 </chapterinfo>
 
 <title>Introduction</title>
-
 <para>
-This plugin can be used for batch resize images in an image collection. It use "convert" program from "ImageMagick" package. You can resize up or down the images size. 3 resizing types have been implemented:
+This plugin can be used to batch resize images in an image collection. It uses the
+<command>convert</command> program from the <application>ImageMagick</application>
+package. You can make images larger or smaller. Three resizing types have been implemented:
 </para>
 
 <itemizedlist>
-<listitem><para><emphasis>Proportional (1 dim.)</emphasis> : standard auto-resizing using one dimension.
-The width or the height of the images will be automatically selected in depending of the images
-orientation. The images aspect ratio are preserved.</para></listitem>
-<listitem><para><emphasis>Proportional (2 dim.)</emphasis> : auto-resizing using two dimensions.
-The images aspect ratio are preserved. For example, you can use that for to adapt your images size to your
-screen size. </para></listitem>
-<listitem><para><emphasis>Non proportional</emphasis> : non proportional resizing using two dimensions.
-The images aspect ratio aren't preserved.</para></listitem>
-<listitem><para><emphasis>Prepare to print</emphasis> : prepare the image for a photographic printing.
-The user can set the print resolution and the photographic paper size. The target image will be adapted
-to the good dimensions (included the background size, margin size, and background color).</para></listitem>
+<listitem><para><guilabel>Proportional (1 dim.)</guilabel>: standard auto-resizing
+using one dimension. The width or the height of the images will be automatically
+selected depending on the images orientation. The images' aspect ratio is preserved.
+</para></listitem>
+<listitem><para><guilabel>Proportional (2 dim.)</guilabel>: auto-resizing using
+two dimensions. The images aspect ratio are preserved. For example, you can use
+this for to adapt your images size to your screen size. </para></listitem>
+<listitem><para><guilabel>Non proportional</guilabel>: non proportional resizing
+using two dimensions. The images' aspect ratio is not preserved.</para></listitem>
+<listitem><para><guilabel>Prepare to print</guilabel>: prepare the image for
+photographic printing. The user can set the print resolution and the photographic
+paper size. The target image will be adapted to the best dimensions (including the
+background size, margin size, and background color).</para></listitem>
 </itemizedlist>
 
 </chapter>
