--- a/timeadjust.docbook
+++ b/timeadjust.docbook
@@ -27,7 +27,7 @@ The Kipi Time Adjust plugin is a tool for adjusting image files timestamp.
 <para>
 The Kipi plugin <quote>Time Adjust</quote> currently has no
 documentation. If you are interested in rectifying that situation,
-please contact Kipi team mailing list <email>kde-imaging@kde.org</email>.
+please contact the Kipi team mailing list at <email>kde-imaging@kde.org</email>.
 </para>
 
 </chapter>
