--- a/calendar.docbook
+++ b/calendar.docbook
@@ -31,7 +31,7 @@ The Kipi Calendar plugin is a tool to create calendar from image collections.
 <para>
 The Kipi plugin <quote>Calendar</quote> currently has no
 documentation.  If you are interested in rectifying that situation,
-please contact Kipi team mailing list <email>kde-imaging@kde.org</email>.
+please contact the Kipi team mailing list at <email>kde-imaging@kde.org</email>.
 </para>
 
 </chapter>
