--- a/flickrexport.docbook
+++ b/flickrexport.docbook
@@ -30,19 +30,25 @@
 <title>Introduction</title>
 
   <para>
-  Flickr is an online photo management application on internet. Flickr is a way to get your photos to the people who matter to you. With Flickr you can show off your favorite photos to the world, blog the photos you take with a cameraphone, and securely and privately show photos to your friends and family around the world.
+  Flickr is an online photo management application. Flickr is a way
+  to get your photos to the people who matter to you. With Flickr you can show off
+  your favorite photos to the world, blog the photos you take with a cameraphone,
+  and securely and privately show photos to your friends and family around the world.
   </para>
   
   <para>
-  The FlickrExport plugin can be used to upload image collection from your host to the remote flickr server using internet.
+  The FlickrExport plugin can be used to upload an image collection from your
+  computer to the remote flickr server using the Internet.
   </para>
 
 <sect1 id="using-plugin-flickrexport"> 
   <title>Plugin initialization on first access</title>
   
   <para>
-  On accessing the plugin for the first time the user is taken through the process of obtaining a token. Which is used for authentication purposes.
-  Following dialog will popup and a browser window will be launched where user will signup in to <ulink url="http://www.flickr.com">Flickr</ulink>.
+  When accessing the plugin for the first time the user you are taken through the process
+  of obtaining a token which is used for authentication purposes.
+  The following dialog will popup and a browser window will be launched you
+  will log in to <ulink url="http://www.flickr.com">Flickr</ulink>:
   </para>
   
   <figure id="flickrexport-first-signup-dialog">
@@ -53,8 +59,9 @@
   </figure>
   
   <para>
-  On successful signup FlickrUploadr will be allowed to send photos to flickr website. The user will be presented with the following page on
-  successful signup.
+  After successful signup FlickrUploadr will be allowed to send photos to the flickr
+  website. You will be presented with the following page on
+  successful signup:
   </para>
   
   <figure id="flickrexport-successful-signup">
@@ -65,34 +72,41 @@
   </figure>
   
   <para>
-  Simply close the browser windows and return to the host application Dialog. On clicking <guilabel>Yes</guilabel>, user will see the interface to upload photos to Flickr. Described in the next section.
+  Then, simply close the browser windows and return to the host application dialog.
+  After clicking <guilabel>Yes</guilabel>, you will see the interface used to upload
+  photos to Flickr, described in the next section.
   </para>
 
 </sect1>
 
 <sect1 id="uploading-using-plugin-flickrexport"> 
-<title>The Regular Plugin Usage</title>
+<title>Regular Plugin Usage</title>
 
   
   <para>
-   When the flickrexport plugin is invoked for second time or later the user is greeted with the following dialog, which shows the current access permissions flickrexport plugin has. The uploading process requires "write" permissions. The plugin doesn't allow any other permission as of now. User is asked if he wants to proceed with his current permissions.
+   When the flickrexport plugin is invoked for second time or later you are
+   greeted with the following dialog, which shows the current access permissions
+   the Flickr Export plugin has. The uploading process requires <quote>write</quote>
+   permissions. The plugin doesn't allow any other permissions as of now. You
+   are then asked if they want to proceed with their current permissions.
     </para>
      <figure id="flickrexport-current-permissions-dialog">
       <title>Current Permissions Dialog preview</title>
       <mediaobject><imageobject>
-        <imagedata srccredit="The " fileref="flickrexportcontinue.png"/>
+        <imagedata srccredit="Current Permission Dialog preview" fileref="flickrexportcontinue.png"/>
       </imageobject></mediaobject>
   </figure>
 
-      <para>
-   On clicking <guilabel>Yes</guilabel>, user will see the interface to upload photos to Flickr. 
+   <para>
+   After clicking <guibutton>Yes</guibutton>, you will see the interface to upload
+   photos to Flickr.
    </para>
    <para>
-   On clicking <guilabel>No</guilabel>, the authentication process is repeated.
-  </para>
+   After clicking <guibutton>No</guibutton>, the authentication process is repeated.
+   </para>
   
-      <para>
-  This Main upload dialog is shown belows.
+  <para>
+  The Main upload dialog is shown below:
   </para>
   
   	
@@ -104,24 +118,34 @@
   </figure>
   
   <para>
-  The <guilabel>Add Photos</guilabel> button should be clicked once user has set in the other options in the dialog. On clicking this button user a image selector dialog opens up, user can select the photos he wants to upload and click ok. On clicking ok the image uploading starts.
+  The <guibutton>Add Photos</guibutton> button should be clicked once user has set
+  the other options in the dialog. After clicking this button an image selector dialog
+  opens up where you can select the photos you want to upload and click
+  <guibutton>OK</guibutton>, whereupon the image uploading starts.
   </para>
   
 
   <para>
-  The <guilabel>Tags</guilabel> field can be filled with a series of words (comma separated) which will be assigned as tags to the images uploaded.
+  The <guilabel>Tags</guilabel> field can be filled with a series of words (comma
+  separated) which will be assigned as tags to the images uploaded.
   </para>
   
   <para>
-  The <guilabel>Public</guilabel>, <guilabel>Friends</guilabel>, and <guilabel>Family</guilabel> Checkbox can be checked to have appropriate access permission on the images you upload. By default the images upload are private.
+  The <guilabel>Public</guilabel>, <guilabel>Friends</guilabel>, and <guilabel>Family</guilabel>
+  checkboxes can be checked to assign appropriate access permissions to the images
+  you upload. By default the images uploaded are private.
   </para>
   
   <para>
-  If the <guilabel>Resize photos before uploading</guilabel> option is selected, the photos will be resized before uploading. The values will be read from the <guilabel>Maximum dimension</guilabel> combobox.
+  If the <guilabel>Resize photos before uploading</guilabel> option is selected,
+  the photos will be resized before uploading. The values will be read from the
+  <guilabel>Maximum dimension</guilabel> combobox.
   </para>
   
   <para>
-  The <guilabel>Maximum Dimension</guilabel> combobox can be used to adjust the maximum height to which the photos will be resized before uploading. The width calculation will be done so as to have the aspect ratio conserved.
+  The <guilabel>Maximum Dimension</guilabel> combobox can be used to adjust the
+  maximum height to which the photos will be resized before uploading. The width
+  calculation will be done so as to have the aspect ratio conserved.
   </para>
   
  <figure id="flickrexport-uploading-progress-dialog">
@@ -131,11 +155,12 @@
       </imageobject></mediaobject>
   </figure>
   <para>
- User can click <guilabel>Cancel</guilabel> button to abort the uploading of photos.
+ You can click <guilabel>Cancel</guilabel> button to abort the uploading of photos.
 </para>
 
 <para>
-Finally user can view the uploaded photos by visting <ulink url="http://www.flickr.com">Flickr</ulink> website.
+Finally, you can view the uploaded photos by visting the
+<ulink url="http://www.flickr.com">Flickr</ulink> website.
 </para>
 </sect1>
 
