--- a/imagesgallery.docbook
+++ b/imagesgallery.docbook
@@ -30,20 +30,26 @@ The Kipi images gallery plugin is a tool for exporting a set of Albums to an HTM
 <title>Introduction</title>
 
 <para>
-This powerful plugin can export your Albums into a HTML page compliant to 4.01 version for web publication in the form of an image gallery. You can easily select the Albums to export in an HTML page and set a big parameters list for the HTML rendering. UTF-8 encoding is used for a best internationalization.
+This powerful plugin can export your Albums into a HTML 4.01 complaint web image gallery.
+You can easily select the Albums to export in an HTML page and set many parameters
+for the HTML rendering. UTF-8 encoding is used for the best internationalization.
 </para>
 
 <para>
-You can see some samples building with this plugin at this 
-<ulink url="http://digikamplugins.free.fr/ImagesGallerySamples/MultipleAlbums/index.htm"><citetitle>url.</citetitle></ulink>
+<ulink url="http://digikamplugins.free.fr/ImagesGallerySamples/MultipleAlbums/index.htm">
+You can see some samples built with this plugin at this &URL;</ulink>
 </para>
 
 <sect1 id="using-plugin-imagesgallerycollectionselection">
 <title>Collections Selection Dialog</title>
 
 <para>
-The plugin has four tabs to adapt the settings.
-The <guilabel>Selection</guilabel> tab allows you to select all Albums you want to export to HTML. Just check the respective Albums (they are displayed without hierarchical nesting). The three buttons to the right help to quickly select large amounts of Albums. The frame below shows the Album ID-picture with the text that will appear as a header of the HTML page.
+The plugin has four tabs to change its settings.
+The <guilabel>Selection</guilabel> tab allows you to select all Albums you want
+to export to HTML. Just check the respective Albums (they are displayed without
+hierarchical nesting). The three buttons to the right help to quickly select large
+amounts of Albums. The frame below shows the Album ID-picture with the text that
+will appear as a header of the HTML page.
 </para>
 
 <figure id="imagesgallery-collections-selection-dialog">
@@ -59,7 +65,12 @@ The <guilabel>Selection</guilabel> tab allows you to select all Albums you want 
 <title>Look Settings Dialog</title>
 
 <para>
-The <guilabel>Look</guilabel> tab defines the general look and layout of each page. This tab is largely self-explanatory. The <guilabel>Create pages for each image</guilabel> check box will create a gallery with a HTML page per image, that is, if you click onto an image a new page will open showing the image within the web browser. If you leave this box unchecked clicking the images will directly open them with the default image viewer, &eg; Kuickshow.
+The <guilabel>Look</guilabel> tab defines the general look and layout of each page.
+This tab is largely self-explanatory. The <guilabel>Create pages for each image</guilabel>
+check box will create a gallery with a HTML page per image, that is, if you click
+onto an image a new page will open showing the image within the web browser.
+If you leave this box unchecked clicking the images will directly open them with
+the default image viewer, &eg; Kuickshow.
 </para>
 
 <figure id="imagesgallery-look-settings-dialog">
@@ -75,20 +86,31 @@ The <guilabel>Look</guilabel> tab defines the general look and layout of each pa
 <title>Album Settings Dialog</title>
 
 <para>
-The <guilabel>Album</guilabel> tab defines the settings of where and how to store the gallery with all its associated images. Select a folder with write access where you want the gallery to be written to. A sub-folder named KIPIHTMLExport will be created containing everything.
+The <guilabel>Album</guilabel> tab defines the settings of where and how to store
+the gallery with all its associated images. Select a folder with write access
+where you want the gallery to be written to. A sub-folder named KIPIHTMLExport
+will be created containing everything.
 </para>
 
 <para>
-When you check the <guilabel>Resize target images</guilabel> box you can fix the maximum target image size (in pixels) with the slider below it. Images bigger than this value will be scaled down to it, smaller images will not be modified.
-The next two check boxes allow you to set specific image compression features. If disk space is of concern check the target image compression and lower the compression level from the host application default value. Then you can choose between JPEG (smallest filesize, but lossy) and PNG (lossless and free license) formats.
+When you check the <guilabel>Resize target images</guilabel> box you can fix the
+maximum target image size (in pixels) with the slider below it. Images bigger than
+this value will be scaled down to it, but smaller images will not be modified.
+The next two check boxes allow you to set specific image compression features.
+If disk space is of concern check the target image compression and lower the
+compression level from the host application default value. Then you can choose
+between JPEG (smallest filesize, but lossy) and PNG (lossless and free license) formats.
 </para>
 
 <note><para>
-If JPEG file format is selected for target resizing images, all EXIF information will be preserved from original JPEG files.
+If JPEG file format is selected for target resizing images, all EXIF information
+will be preserved from the original JPEG files.
 </para></note>
 
 <para>
-With the <guilabel>Set different color depth</guilabel> check box you can change the default color depth. This will of course influence the filesize. The rest of the setting are rather self-explanatory.
+With the <guilabel>Set different color depth</guilabel> check box you can change
+the default color depth. This will of course influence the file size. The rest
+of the settings are rather self-explanatory.
 </para>
 
 <figure id="imagesgallery-album-settings-dialog">
@@ -104,7 +126,8 @@ With the <guilabel>Set different color depth</guilabel> check box you can change
 <title>Thumbnails Settings Dialog</title>
 
 <para>
-The <guilabel>Thumbnails</guilabel> tab allows to set some of the  <guilabel>Album</guilabel> tab settings for the thumbnails (that are the small images shown in the gallery).
+The <guilabel>Thumbnails</guilabel> tab allows to set some of the <guilabel>Album</guilabel>
+tab settings for the thumbnails (that are the small images shown in the gallery).
 </para>
 
 <figure id="imagesgallery-thumbnails-settings-dialog">
@@ -120,8 +143,8 @@ The <guilabel>Thumbnails</guilabel> tab allows to set some of the  <guilabel>Alb
 <title>Images Gallery in Action</title>
 
 <para>
-A progress dialog giving a feedback indicate to user. Press <guilabel>Cancel</guilabel> button during this stage 
-if you want abort the process.
+A progress dialog giving a feedback indicate to user. Press <guilabel>Cancel</guilabel>
+button during this stage if you want abort the process.
 </para>
 
 <figure id="imagesgallery-images-gallery-action">
@@ -132,8 +155,10 @@ if you want abort the process.
 </figure>
 
 <para>
-When all jobs are completed, this dialog will not closed automatically and user can consult the progress messages 
-if any errors occurs durring this stage. The web browser will be started automaticly at end to display a gallery preview. Press <guilabel>Close</guilabel> button to close dialog.
+When all jobs are completed, this dialog will not closed automatically and you
+can consult the progress messages if any errors occurs durring this stage. The web
+browser will be started automatically at end to display a gallery preview. Press the
+<guibutton>Close</guibutton> button to close the dialog.
 </para>
 
 <figure id="imagesgallery-images-gallery-preview">
