--- a/recompressimages.docbook
+++ b/recompressimages.docbook
@@ -26,15 +26,17 @@ The Kipi recompress images plugin is a tool for recompressing the image files.
 
 <para>
 
-This plugin can be used for batch recompress images in an Album. It use "convert" program from "ImageMagick" package. The image files formats supported are:
+This plugin can be used to batch recompress images in an Album. It uses the
+<command>convert</command> program from the <application>ImageMagick</application>
+package. The image file formats supported are:
 
 </para>
 
 <itemizedlist>
-<listitem><para>JPEG.</para></listitem>
-<listitem><para>PNG.</para></listitem>
-<listitem><para>TIFF.</para></listitem>
-<listitem><para>TGA.</para></listitem>
+<listitem><para>JPEG</para></listitem>
+<listitem><para>PNG</para></listitem>
+<listitem><para>TIFF</para></listitem>
+<listitem><para>TGA</para></listitem>
 </itemizedlist>
 
 </chapter>
