--- a/wallpaper.docbook
+++ b/wallpaper.docbook
@@ -25,17 +25,18 @@ The Kipi wall paper plugin is a tool for push an image in the desktop background
 <title>Introduction</title>
 
 <para>
-This plugin place the current selected image in the KDE desktop in according with the menu sub-option selected:
+This plugin places the current selected image on the &KDE; &Plasma; desktop
+according to the menu sub-option selected:
 </para>
 
 <itemizedlist>
-<listitem><para>Centered.</para></listitem>
-<listitem><para>Tiled.</para></listitem>
-<listitem><para>Centered tiled.</para></listitem>
-<listitem><para>Centered max-aspect.</para></listitem>
-<listitem><para>Tiled max-aspect.</para></listitem>
-<listitem><para>Scaled.</para></listitem>
-<listitem><para>Centered auto fit.</para></listitem>
+<listitem><para><guilabel>Centered</guilabel></para></listitem>
+<listitem><para><guilabel>Tiled</guilabel></para></listitem>
+<listitem><para><guilabel>Centered tiled</guilabel></para></listitem>
+<listitem><para><guilabel>Centered max-aspect</guilabel></para></listitem>
+<listitem><para><guilabel>Tiled max-aspect</guilabel></para></listitem>
+<listitem><para><guilabel>Scaled</guilabel></para></listitem>
+<listitem><para><guilabel>Centered auto fit</guilabel></para></listitem>
 </itemizedlist>
 
 </chapter>
